# agentic-mcp-quote-to-cash

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agents/: __init__.py  decision_agent.py  renewal_signal_builder.py
api/: __init__.py  dependencies.py  main.py
api/routers/: agent.py  audit.py  context.py  demo.py  settings.py
audit/: __init__.py  audit_store.py  models.py
context/: __init__.py  assembler.py  conflict_resolver.py  models.py  normalizer.py  validator.py
demo/: __init__.py  runner.py  scenario_1_snapshot_vs_live.py  scenario_2_sf_to_oracle.py  scenario_3_dynamics_to_oracle.py  scenario_4_sap_zuora.py  scenario_5_full_stack_variation.py  scenario_6_degraded.py
docs/: architecture.md  developer-flow-walkthrough.md
docs/planning/: AGENTS.md  ARCHITECTURE.md  About_BusinessProblem.html  TASKS.md
mcp/: base.py  factory.py
mcp/adapters/: common.py
mcp/adapters/install_base/: oracle_install_base_mapper.py  oracle_install_base_mcp.py  salesforce_asset_mcp.py  servicenow_cmdb_mcp.py
mcp/interfaces/: cpq_interface.py  crm_interface.py  oms_interface.py  sub_interface.py
seed_data/: __init__.py  accounts.json  activities.json  contacts.json  install_base.json  loader.py  opportunities.json  orders.json  seeder.py  subscriptions.json
tests/: __init__.py  conftest.py  test_adapters.py  test_api.py  test_audit_store.py  test_context_assembly.py  test_cpq_adapter.py  test_crm_adapters.py  test_decision_agent.py  test_install_base_adapter.py  test_mcp_base.py  test_mcp_factory.py  test_models.py  test_oms_adapters.py  test_settings.py  test_sub_adapters.py
ui/: index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  vite.config.ts
ui/public/: about.html
ui/src/: App.tsx  main.tsx  style.css  vite-env.d.ts
(+36 files in other folders)
