[project]
name = "agentic-mcp-quote-to-cash"
version = "0.1.0"
description = "MCP integration layer for vendor-agnostic quote-to-cash renewal decisions."
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.20.0",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "mcp>=1.0.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
  "sqlalchemy[asyncio]>=2.0.30",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "faker>=25.0.0",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "mcp", "context", "agents", "audit", "demo", "seed_data"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM", "RUF"]
ignore = ["B008", "E501", "UP017", "UP042", "UP047"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["api", "mcp", "context", "agents", "audit", "demo", "seed_data"]
omit = [
  "*/__init__.py",
  "mcp/adapters/crm/*/*_mcp.py",
  "mcp/adapters/crm/*/*_mapper.py",
  "mcp/adapters/cpq/*/*_mcp.py",
  "mcp/adapters/cpq/*/*_mapper.py",
  "mcp/adapters/oms/*/*_mcp.py",
  "mcp/adapters/oms/*/*_mapper.py",
  "mcp/adapters/sub/*/*_mcp.py",
  "mcp/adapters/sub/*/*_mapper.py",
  "mcp/adapters/install_base/oracle_install_base_mcp.py",
  "mcp/adapters/install_base/oracle_install_base_mapper.py",
  "api/main.py",
  "api/routers/*.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
